--- a/styles/contact_styles.css
+++ b/styles/contact_styles.css
@@ -245,6 +245,7 @@ ul, li {
 	color: #FFFFFF;
 }
 
+/*------------------------Hamburger Menu-------------------------------*/
 .hamburger_container {
 	display: none;
 	cursor: pointer;
@@ -348,6 +349,7 @@ ul, li {
 
 .fs_menu_container.active {
 	top: 0;
+	background-color: rgba(255, 255, 255, 0.7);
 }
 
 .fs_menu_list {
@@ -374,6 +376,21 @@ ul, li {
 	-ms-transition: all 600ms 600ms cubic-bezier(.19,1,.22,1);
 	-o-transition: all 600ms 600ms cubic-bezier(.19,1,.22,1);
 	transition: all 1600ms cubic-bezier(.19,1,.22,1);
+}
+
+.fs_menu_list li:first-child a {transition-delay: 600ms;}
+.fs_menu_list li:nth-child(2) a {transition-delay: 670ms;}
+.fs_menu_list li:nth-child(3) a {transition-delay: 740ms;}
+.fs_menu_list li:nth-child(4) a {transition-delay: 810ms;}
+.fs_menu_list li:nth-child(5) a {transition-delay: 880ms;}
+.fs_menu_list li:nth-child(6) a {transition-delay: 950ms;}
+.fs_menu_list li:nth-child(7) a {transition-delay: 900ms;}
+.fs_menu_list li:nth-child(8) a {transition-delay: 950ms;}
+.fs_menu_list li:nth-child(9) a {transition-delay: 1000ms;}
+.fs_menu_list li:nth-child(10) a {transition-delay: 1050ms;}
+
+.fs_menu_container.active .fs_menu_list li a {
+	transform: none;
 }
 
 .fs_menu_list li a span {
@@ -761,6 +778,22 @@ ul, li {
 	margin-top: 60px;
 }
 
+.back_button {
+	background-color: rgba(255, 66, 0, 0.7);
+	width: 60px;
+	height: 35px;
+	position: fixed;
+	bottom: 0px;
+	right: 60px;
+	text-align: center;
+	z-index: 10;
+}
+
+.fa-angle-up { 
+	color:#fff;
+	font-size: 30px;
+}
+
 
 /*------------------------Footer-------------------------------*/
 .footer {
@@ -787,22 +820,25 @@ ul, li {
 	display: inline-block;
 	margin-left: 6px;
 }
+
 .footer_social li:first-child {
 	margin-left: 0px;
 }
+
 .footer_social li a {
 	width: 100%;
 	height: 100%;
 	padding: 10px;
 }
+
 .footer_social li i {
 	font-size: 14px;
 	color: rgba(110,110,110,0.8);
 }
+
 .footer_social li:hover i {
 	color: #ff4200;
 }
-
 
 .footer-link {
 	float: left;
@@ -830,10 +866,18 @@ ul, li {
 	.nav_items li {
 		margin-left: 0px;
 	}
+
+	.footer {
+		height: 150px;
+	}
 }
 
 @media (max-width: 991px)
 { 
+	.back_button {
+		right: 5px;
+	}
+
 	.contact_sidebar {
 		margin-top: 60px;
 	}
@@ -846,13 +890,11 @@ ul, li {
 
 @media (max-width: 821px)
 {
-	.main_nav
-	{
+	.main_nav {
 		display: none;
 	}
 
-	.hamburger_container
-	{
+	.hamburger_container {
 		display: block;
 	}
 }
@@ -866,5 +908,30 @@ ul, li {
 
 	iframe { 
 		max-height: 300px;
+	}
+
+	.footer {
+		height: 200px;
+	}
+
+	.footer_container {
+		padding: 0px;
+	}
+
+	.row.footer_content {
+		height: 100%;
+	}
+
+	.footer_row {
+		margin-top: 0px;
+	}
+	
+	.footer_social {
+		padding: 0px;
+	}
+
+	.footer-link {
+		float: none;
+		margin: 0px;
 	}
 }
