--- a/styles/services_styles.css
+++ b/styles/services_styles.css
@@ -271,6 +271,8 @@ ul, li {
 	color: #FFFFFF;
 }
 
+
+/*------------------------Hamburger Menu-------------------------------*/
 .hamburger_container {
 	display: none;
 	cursor: pointer;
@@ -374,6 +376,7 @@ ul, li {
 
 .fs_menu_container.active {
 	top: 0;
+	background-color: rgba(255, 255, 255, 0.7);
 }
 
 .fs_menu_list {
@@ -400,6 +403,21 @@ ul, li {
 	-ms-transition: all 600ms 600ms cubic-bezier(.19,1,.22,1);
 	-o-transition: all 600ms 600ms cubic-bezier(.19,1,.22,1);
 	transition: all 1600ms cubic-bezier(.19,1,.22,1);
+}
+
+.fs_menu_list li:first-child a {transition-delay: 600ms;}
+.fs_menu_list li:nth-child(2) a {transition-delay: 670ms;}
+.fs_menu_list li:nth-child(3) a {transition-delay: 740ms;}
+.fs_menu_list li:nth-child(4) a {transition-delay: 810ms;}
+.fs_menu_list li:nth-child(5) a {transition-delay: 880ms;}
+.fs_menu_list li:nth-child(6) a {transition-delay: 950ms;}
+.fs_menu_list li:nth-child(7) a {transition-delay: 900ms;}
+.fs_menu_list li:nth-child(8) a {transition-delay: 950ms;}
+.fs_menu_list li:nth-child(9) a {transition-delay: 1000ms;}
+.fs_menu_list li:nth-child(10) a {transition-delay: 1050ms;}
+
+.fs_menu_container.active .fs_menu_list li a {
+	transform: none;
 }
 
 .fs_menu_list li a span {
@@ -810,6 +828,22 @@ ul, li {
 	margin-top: 60px;
 }
 
+.back_button {
+	background-color: rgba(255, 66, 0, 0.7);
+	width: 60px;
+	height: 35px;
+	position: fixed;
+	bottom: 0px;
+	right: 60px;
+	text-align: center;
+	z-index: 10;
+}
+
+.fa-angle-up { 
+	color:#fff;
+	font-size: 30px;
+}
+
 
 /*------------------------Footer-------------------------------*/
 .footer {
@@ -868,260 +902,96 @@ ul, li {
 }
 
 
-
 /*------------------------Responsive-------------------------------*/
-@media only screen and (max-width: 1280px)
+@media (max-width: 1040px)
 {
-	.super_container
-	{
-		padding-left: 0px;
-		padding-right: 0px;
-	}
-}
-
-
-@media only screen and (max-width: 1100px)
-{
-	
-
-@media only screen and (max-width: 991px)
-{
-	h1{font-size: 48px;}
-	.main_nav
-	{
+	.icon-bar {
 		display: none;
 	}
-	.hamburger_container
-	{
-		display: block;
-	}
-	.discover_button
-	{
-		margin-top: 37px;
-	}
-	.home_social_container
-	{
-		right: 0;
-	}
-	.service_item
-	{
-		margin-bottom: 50px;
-	}
-	.service_item h3
-	{
-		margin-bottom: 15px;
-	}
-	.icon_container
-	{
-		margin-bottom: 30px;
-	}
-	.services_button
-	{
-		margin-top: 40px;
+
+	.nav_items li {
 		margin-left: 0px;
-		margin-right: 0px;
 	}
-	.zeta_card_content
-	{
-		max-width: 720px;
-		margin: 0 auto;
-		padding-left: 15px;
-		padding-right: 15px;
+
+	.button.services_button {
+		top: 0px;
+		margin-bottom: 20px;
 	}
-	.zeta_card
-	{
-		padding-top: 120px;
-		padding-bottom: 110px;
-		padding-left: 0px;
-		padding-right: 0px;
+
+	#ia-container-2  {
+		width: auto;
 	}
-	.pic_box
-	{
-		margin-bottom: 82px;
+	
+	#ia-container-3, #ia-container-4 {
+		width: auto;
 	}
-	.pic_box:last-child
-	{
-		margin-bottom: 0px;
+
+	.footer {
+		height: 150px;
 	}
 }
 
+@media (max-width: 991px)
+ {
+	.back_button {
+		right: 5px;
+	}
 
-@media only screen and (max-width: 767px)
-{
-	.footer_social li
-	{
-		margin-left: 4px;
-	}
-	.footer_social li i
-	{
-		font-size: 13px;
-	}
-	.zeta_card_content
-	{
-		max-width: 540px;
-	}
-}
-
-
-@media only screen and (max-width: 575px)
-{
-	h2{font-size:24px;}
-	p{font-size:14px;}
-	.header
-	{
-		padding-left: 15px;
-		padding-right: 15px;
-	}
-	.logo
-	{
-		margin-left: 4px;
-	}
-	.fs_menu_shapes
-	{
-		width: 30%;
-		bottom: 35px;
-		left: -30px;
-	}
-	.fs_menu_list li a
-	{
-		font-size: 48px;
-	}
-	.fs_menu_container
-	{
-		padding-right: 30px;
-	}
-	.fs_social_container
-	{
-		right: 20px;
-	}
-	.footer
-	{
-		padding-top: 30px;
-		padding-bottom: 30px;
-	}
-	.footer_content
-	{
+	.services {
+		padding-top: 40px;
 		height: auto;
 	}
-	.cr p
-	{
-		font-size: 13px;
-		margin-bottom: 15px;
+ }
+
+@media (max-width: 821px)
+{
+	.main_nav {
+		display: none;
+	}
+
+	.hamburger_container {
+		display: block;
 	}
 }
+	
 
-
-@media only screen and (max-width: 479px)
+@media (max-width: 600px)
 {
-	h1{font-size: 24px;}
-	h2{font-size: 16px;}
-	h3{font-size: 16px;}
-	p{font-size: 13px;}
-	.fs_menu_container.active
-	{
-		padding-top: 100px;
+	.section_title h2 {
+		width: 100%;
 	}
-	.fs_menu_list li a
-	{
-		font-size: 24px;
+
+	.ia-container { 
+		display: none;
 	}
-	.fs_menu_list li a > span::after
-	{
-		bottom: 0px;
-		height: 2px;
-	}
-	.fs_menu_list li a span span
-	{
-		top: 0;
-		left: -2px;
-	}
-	.fs_social li
-	{
-		margin-left: 5px;
-	}
-	.main_slider_content p
-	{
-		font-size: 13px;
-	}
-	.button
-	{
-		width: 170px;
-		height: 50px;
-	}
-	.button a
-	{
-		font-size: 9px;
-		line-height: 50px;
-	}
-	.discover_button
-	{
-		margin-top: 28px;
-	}
-	.parallax-window
-	{
-	    min-height: 266px;
-	}
-	.home
-	{
-		height: 266px;
-	}
-	.home_content
-	{
-		margin-top: 114px;
-	}
-	.home_content h1
-	{
-		margin-bottom: 0px;
-	}
-	.home_content span
-	{
-		font-size: 10px;
-		letter-spacing: 0.5em;
-	}
-	.home_social_container
-	{
-		display: none !important;
-	}
-	.header
-	{
-		height: 90px;
-	}
-	.section_title h2::before
-	{
-		bottom: 51px;
-	}
-	.services
-	{
-		padding-top: 100px;
-		padding-bottom: 100px;
-	}
-	.service_item
-	{
+
+	.features_description {
 		margin-bottom: 40px;
+    	text-align: center;
 	}
-	.services_button
-	{
-		margin-top: 10px;
+
+	.footer {
+		height: 200px;
 	}
-	.icon_container
-	{
-		margin-bottom: 25px;
+
+	.footer_container {
+		padding: 0px;
 	}
-	.service_item h3
-	{
-		margin-bottom: 10px;
+
+	.row.footer_content {
+		height: 100%;
 	}
-	.services_shapes
-	{
-		top: 0;
-		text-align: right;
+
+	.footer_row {
+		margin-top: 0px;
 	}
-	.services_shapes img
-	{
-		width: 70%;
+	
+	.footer_social {
+		padding: 0px;
 	}
-	.contact_button
-	{
-		margin-top: 45px;
+
+	.footer-link {
+		float: none;
+		margin: 0px;
 	}
 }
